# chip8-rs

./: Cargo.toml  INSTALL.md  README.md
Phyton/: Chip8-KS Prompt Source Code.py
src/: cartridge.rs  display.rs  fontset.rs  input.rs  main.rs  processor.rs
