[package]
name = "chip8-rs"
version = "0.1.0"
authors = ["Marco Thomas <mail@marco-thomas.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"

[dependencies.sdl2]
version = "0.34.5"
default-features = false
features = ["ttf","image","gfx","mixer"]
